--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <h1>My main title</h1>
 
-    <img src="images/index.jpg" alt="My test image" title="Please click on the image">
+    <img src="index.jpg" alt="My test image" title="Please click on the image">
 
     <p>At Mozilla, we`re a global community of<p>
 
@@ -30,6 +30,6 @@
 
 <p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/" target="_blank">Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.</p>
     <button>Change user</button>
-     <script src="scripts/main.js"></script>
+     <script src="main.js"></script>
   </body>
 </html>
