--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="author" content="beresh">
+    <meta name="description" content="this is a test that I try to be fun atleast for me.">
     <meta charset="utf-8">
     <title>My test page</title>
     <link href="style.css" rel="stylesheet" type="text/css">
