--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     </style>
   </head>
   <body>
+     <div>
+       
+    </div>
+   
+    <div>
     <h1>My main title</h1>
 
     <img src="index.jpg" alt="My test image" title="Please click on the image">
@@ -33,5 +38,6 @@
 <p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/" target="_blank">Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.</p>
     <button>Change user</button>
      <script src="main.js"></script>
+    </div>
   </body>
 </html>
