--- a/index.html
+++ b/index.html
@@ -13,12 +13,8 @@
     }
     </style>
   </head>
-  <body>
-     <div>
-       
-    </div>
-   
-    <div>
+ <body>
+  <div class="mozilla">
     <h1>My main title</h1>
 
     <img src="index.jpg" alt="My test image" title="Please click on the image">
@@ -39,5 +35,10 @@
     <button>Change user</button>
      <script src="main.js"></script>
     </div>
+      <div class="head">
+
+          <a href="http://www.hadirahiminejad.ir" target="_blank" title="this is web page that I try to fix it as a shopping website"><b> see more of my tries</b>
+
+     </div>
   </body>
 </html>
