--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
       <div class="head">
 
-          <a href="http://www.hadirahiminejad.ir" target="_blank" title="this is web page that I try to fix it as a shopping website"><b> see more of my tries</b>
+          <a href="http://www.hadirahiminejad.ir" target="_blank" title="this webpage is a trial version for educational purposes "><b>To see more </b></a>
 
      </div>
   </body>
