--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="shortcut icon" href="Untitled.png"title="beresh" type="image/x-icon">
     <meta name="author" content="beresh">
-    <meta name="description" content="this is a test that I try to be fun atleast for me.">
+    <meta  property="og:description"  content="this is a test that I try to be fun atleast for me.">
     <meta charset="utf-8">
     <title>My test page</title>
     <link href="style.css" rel="stylesheet" type="text/css">
