--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="shortcut icon" href= bereshIcon.png"  type="image/x-icon">
     <meta name="author" content="beresh">
-    <meta  property="og:description"  content="this is a test that I try to be fun atleast for me.">
+    <meta   name="description"  content="this is a test that I try to be fun atleast for me.">
     <meta charset="utf-8">
     <title>My test page</title>
     <link href="style.css" rel="stylesheet" type="text/css">
