--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="shortcut icon" href= bereshIcon.png"  type="image/x-icon">
+    <link rel="shortcut icon" href= bereshIcon.jpg"  type="image/x-icon">
     <meta name="author" content="beresh">
     <meta   name="description"  content="this is a test that I try to be fun atleast for me.">
     <meta charset="utf-8">
