--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
   <head>
-    
-    <link rel="shortcut icon" href="bereshIcon.jpg" type="image/x-icon">
-    <meta name="author" content="beresh">
-    <meta   name="description"  content="this is a test that I try to be fun atleast for me.">
+
+    <meta name="twitter:title" content="Mozilla Developer Network">
+  <link rel="shortcut icon" href="images/bereshIcon.png"  type="image/x-icon">
     <meta charset="utf-8">
     <title>My test page</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="styles/style.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-                                                           
+
   </head>
- <body>
+  <body>
   <div class="mozilla">
+
+
     <h1>My main title</h1>
 
-    <img src="index.jpg" alt="My test image" title="Please click on the image">
+    <img src="images/index.jpg" alt="My test image" title="Please click on the image">
 
     <p>At Mozilla, we`re a global community of<p>
 
@@ -31,12 +32,14 @@
 
 <p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/" target="_blank">Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.</p>
     <button>Change user</button>
-     <script src="main.js"></script>
-    </div>
-      <div class="head">
 
-          <a href="http://www.hadirahiminejad.ir" target="_blank" title="this webpage is a trial version for educational purposes "><b>To see more </b></a>
+     <script src="scripts/main.js"></script>
+       </div>
+     <div class="head">
+
+          <a href="http://www.hadirahiminejad.ir" target="_blank" title="this is web page that I try to fix it as a shopping website"><b> see more of my tries</b>
 
      </div>
   </body>
+
 </html>
