--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
      <script src="scripts/main.js"></script>
        </div>
-     <div class="head">
+     <div class="footer">
 
           <a href="http://www.hadirahiminejad.ir" target="_blank" title="this is web page that I try to fix it as a shopping website"><b> see more of my tries</b>
 
