--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" href="images/bereshIcon.png"  type="image/x-icon">
     <meta charset="utf-8">
     <title>My test page</title>
-    <link href="styles/style.css" rel="stylesheet" type="text/css">
+    <link href="style.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
   </head>
@@ -33,7 +33,7 @@
 <p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/" target="_blank">Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.</p>
     <button>Change user</button>
 
-     <script src="scripts/main.js"></script>
+     <script src="main.js"></script>
        </div>
      <div class="footer">
 
