--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
 
     <meta name="twitter:title" content="Mozilla Developer Network">
-  <link rel="shortcut icon" href="images/bereshIcon.png"  type="image/x-icon">
+  <link rel="shortcut icon" href="bereshIcon.png"  type="image/x-icon">
     <meta charset="utf-8">
     <title>My test page</title>
     <link href="style.css" rel="stylesheet" type="text/css">
@@ -16,7 +16,7 @@
 
     <h1>My main title</h1>
 
-    <img src="images/index.jpg" alt="My test image" title="Please click on the image">
+    <img src="index.jpg" alt="My test image" title="Please click on the image">
 
     <p>At Mozilla, we`re a global community of<p>
 
