--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
 
     <meta name="twitter:title" content="Mozilla Developer Network">
-  <link rel="shortcut icon" href="bereshIcon.png"  type="image/x-icon">
+  <link rel="shortcut icon"   href="bereshIcon.png"  type="image/x-icon">
     <meta charset="utf-8">
     <title>My test page</title>
     <link href="style.css" rel="stylesheet" type="text/css">
@@ -37,7 +37,7 @@
        </div>
      <div class="footer">
 
-          <a href="http://www.hadirahiminejad.ir" target="_blank" title="this is web page that I try to fix it as a shopping website"><b> see more of my tries</b>
+          <a href="http://www.hadirahiminejad.ir" target="_blank" title="this webpage is a trial version for educational purposee"><b>To see more </b></a>
 
      </div>
   </body>
