--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
   <head>
 
-    <meta name="twitter:title" content="Mozilla Developer Network">
-  <link rel="shortcut icon"   href="bereshIcon.png"  type="image/x-icon">
+  <link rel="shortcut icon"   href="bereshicon.png"  type="image/x-icon">
     <meta charset="utf-8">
     <title>My test page</title>
     <link href="style.css" rel="stylesheet" type="text/css">
@@ -12,7 +11,6 @@
   </head>
   <body>
   <div class="mozilla">
-
 
     <h1>My main title</h1>
 
@@ -30,14 +28,14 @@
        creators of the Web. We believe this act of human collaboration across an open platform is essential to individual
        growth and our collective future.</p>
 
-<p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/" target="_blank">Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.</p>
-    <button>Change user</button>
+     <p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/" target="_blank">Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.</p>
+     <button>Change user</button>
 
      <script src="main.js"></script>
        </div>
      <div class="footer">
 
-          <a href="http://www.hadirahiminejad.ir" target="_blank" title="hadirahiminejad.ir web page is a trial version for educational purposee"><b>To see more </b></a>
+        <a href="http://www.hadirahiminejad.ir" target="_blank" title="hadirahiminejad.ir web page is a trial version for educational purposee"><b>To see more </b></a>
 
      </div>
   </body>
