--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
     <title>My test page</title>
     <link href="style.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-
+    
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script>
+$(document).ready(function(){
+    $("html").hover(function(){
+        $(this).css("background-color", " #00539F");
+    });
+    $("html").hover(function(){
+        $(this).css("background-color", " #00539F");
+    });
+});
   </head>
   <body>
   <div class="mozilla">
