--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
     <link href="style.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
 $(document).ready(function(){
-    $("html").hover(function(){
-        $(this).css("background-color", "#00539F");
+    $(".mozilla").focus(function(){
+        $(this).css("background-color", "#FF9500");
     });
-    $("html").hover(function(){
-        $(this).css("background-color", "#00539F");
+    $(".mozilla").blur(function(){
+        $(this).css("background-color", "#ffffff");
     });
 });
+</script>
   </head>
   <body>
   <div class="mozilla">
