--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
 $(document).ready(function(){
-    $("input").focus(function(){
+    $("input").hover(function(){
         $(this).css("background-color", "#00539F");
     });
  });
