--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
    <script>
 $(document).ready(function(){
-    $("input").hover(function(){
+    $("html").hover(function(){
         $(this).css("background-color", "#00539F");
     });
  });
